framec/tests/snapshots/python_snapshots__consts.snap
---
source: framec/tests/python_snapshots.rs
expression: "compile_fixture(\"11_consts\", \"python_3\")"
---
from typing import Any, Optional, List, Dict, Callable

class ConstsFrameEvent:
    def __init__(self, message: str, parameters):
        self._message = message
        self._parameters = parameters


class ConstsFrameContext:
    def __init__(self, event: ConstsFrameEvent, default_return):
        self.event = event
        self._return = default_return
        self._data = {}
        self._transitioned = False


class ConstsCompartment:
    def __init__(self, state: str, parent_compartment = None):
        self.state = state
        self.state_args = []
        self.state_vars = {}
        self.enter_args = []
        self.exit_args = []
        self.forward_event = None
        self.parent_compartment = parent_compartment

    def copy(self) -> 'ConstsCompartment':
        c = ConstsCompartment(self.state, self.parent_compartment)
        c.state_args = self.state_args.copy()
        c.state_vars = self.state_vars.copy()
        c.enter_args = self.enter_args.copy()
        c.exit_args = self.exit_args.copy()
        c.forward_event = self.forward_event
        return c


class Consts:
    def __init__(self):
        self._state_stack = []
        self._context_stack = []
        self.count = 0
        self.__compartment = self.__prepareEnter("Running", [], [])
        self.__next_compartment = None

    @classmethod
    def _create(cls, step: i32 = 5, limit: i32 = 20):
        c = cls()
        c.step = 5
        c.limit = 20
        c.step = step
        c.limit = limit
        __e = ConstsFrameEvent("$>", c.__compartment.enter_args)
        __ctx = ConstsFrameContext(__e, None)
        c._context_stack.append(__ctx)
        c.__kernel(__e)
        c._context_stack.pop()
        return c

    _HSM_CHAIN = {
        "Running": ["Running"],
    }
    def __prepareEnter(self, leaf, state_args, enter_args):
        comp = None
        for name in self._HSM_CHAIN[leaf]:
            new_comp = ConstsCompartment(name)
            new_comp.state_args = list(state_args)
            new_comp.enter_args = list(enter_args)
            new_comp.parent_compartment = comp
            comp = new_comp
        return comp

    def __prepareExit(self, exit_args):
        comp = self.__compartment
        while comp is not None:
            comp.exit_args = list(exit_args)
            comp = comp.parent_compartment

    def __kernel(self, __e):
        # Route event to current state
        self.__router(__e)
        # Drain any transitions queued by the handler
        while self.__next_compartment is not None:
            next_compartment = self.__next_compartment
            self.__next_compartment = None
            # Exit the current (leaf) state
            self.__router(ConstsFrameEvent("<$", self.__compartment.exit_args))
            # Switch to the new compartment
            self.__compartment = next_compartment
            if next_compartment.forward_event is None:
                # No forwarded event — synthesize a fresh $>
                self.__router(ConstsFrameEvent("$>", self.__compartment.enter_args))
            else:
                if next_compartment.forward_event._message == "$>":
                    # Forwarded event IS $> — dispatch directly so the
                    # destination's $> receives the caller's payload
                    self.__router(next_compartment.forward_event)
                else:
                    # Forwarded event is not $> — initialize the destination
                    # with a fresh $>, then dispatch the forward to it
                    self.__router(ConstsFrameEvent("$>", self.__compartment.enter_args))
                    self.__router(next_compartment.forward_event)
            next_compartment.forward_event = None
            # Mark all stacked contexts as transitioned
            for ctx in self._context_stack:
                ctx._transitioned = True

    def __router(self, __e):
        if self.__compartment.state == "Running":
            self._state_Running(__e, self.__compartment)

    def __transition(self, next_compartment):
        self.__next_compartment = next_compartment

    def tick(self):
        __e = ConstsFrameEvent("tick", [])
        __ctx = ConstsFrameContext(__e, None)
        self._context_stack.append(__ctx)
        self.__kernel(__e)
        return self._context_stack.pop()._return

    def get_count(self) -> i32:
        __e = ConstsFrameEvent("get_count", [])
        __ctx = ConstsFrameContext(__e, None)
        self._context_stack.append(__ctx)
        self.__kernel(__e)
        return self._context_stack.pop()._return

    def _state_Running(self, __e, compartment):
        if __e._message == "get_count":
            self._s_Running_hdl_user_get_count(__e, compartment)
            return
        if __e._message == "tick":
            self._s_Running_hdl_user_tick(__e, compartment)
            return

    def _s_Running_hdl_user_get_count(self, __e, compartment):
        self._context_stack[-1]._return = self.count

    def _s_Running_hdl_user_tick(self, __e, compartment):
        self.count = self.count + self.step
        if self.count >= self.limit {
            self.count = 0
        }
